[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "pytolino"
version = "1.5"
authors = [
    {name="Imam Usmani"},
]
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
description = "client for tolino cloud"
dependencies = [
    'requests',
    'mechanize',
]

[project.optional-dependencies]
dev = [
	'pytest',
	'flake8',
	'ipython',
	'sphinx',
	'build',
	'twine',
	'sphinx-rtd-theme'
]

[project.urls]
"Source Code" = "https://github.com/ImamAzim/pytolino"
"Documentation" = "https://pytolino.readthedocs.io/en/latest/index.html"
