[metadata]
name=template_mvc
author = me
description-file = README.rst
license = Proprietary
classifier = 
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Programming Language :: Python :: 3.10
    #Operating System :: Microsoft :: Windows
    #Additional Requirements :: Zemax :: OpticsStudio
    
description=template project with mvc architecture

[options]
zip_safe = False
include_package_data = True
install_requires =
	ipython
	flake8
	pytest
#python_requires = <3.9
packages = find:

[options.entry_points]
console_scripts =
	example = template_mvc.apps.base:example
