[metadata]
name=tolino cloud
author = Imam Usmani
description-file = README.rst
license = GNU general public license v3
classifier = 
    Intended Audience :: Developers
    License :: GNU
    Natural Language :: English
    Programming Language :: Python :: 3
    
description=client for tolino cloud

[options]
zip_safe = False
include_package_data = True
install_requires =
	requests
	mechanize
packages = find:
